--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "fastify": "^5.1.0"
   },
   "scripts": {
-    "dev": "tsx watch src/main.ts"
+    "dev": "tsx watch src/main.ts",
+    "build": "tsc",
+    "start": "node dist/main.js"
   },
   "devDependencies": {
     "@types/node": "^22.9.3",
