build frontend when deploying

--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@fastify/static": "^8.0.3",
     "fastify": "^5.1.0"
   },
   "scripts": {
     "dev": "tsx watch src/main.ts",
-    "build": "tsc",
+    "build": "tsc && mkdir -p dist/public && cp -r ../frontend/dist/* dist/public/",
     "start": "node dist/main.js"
   },
   "devDependencies": {
