--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@fastify/static": "^8.0.3",
     "fastify": "^5.1.0"
   },
