--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fastify/cors": "^10.0.1",
     "@fastify/static": "^8.0.3",
+    "@fastify/websocket": "^11.0.1",
     "fastify": "^5.1.0"
   },
   "scripts": {
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.9.3",
+    "@types/ws": "^8.5.13",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
