--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "@fastify/cors": "^10.0.1",
     "@fastify/static": "^8.0.3",
     "@fastify/websocket": "^11.0.1",
-    "fastify": "^5.1.0"
+    "fastify": "^5.1.0",
+    "@lion-clicker/core-logic": "*"
   },
   "scripts": {
     "dev": "tsx watch src/main.ts",
